starter project route added with other openapi schema changes.
